<resources>
    <string name="app_name">UAS_ML2_221351112</string>
    <string name="app_logo">INI STRING</string>
    <string name="deskription_about">Kanker paru-paru adalah penyebab utama kematian akibat kanker di seluruh dunia, terhitung 1,59 juta kematian pada tahun 2018.Mayoritas kasus kanker paru disebabkan oleh kebiasaan merokok, tetapi paparan polusi udara juga merupakan faktor risiko. Sebuah studi baru telah menemukan bahwa polusi udara dapat dikaitkan dengan peningkatan risiko kanker paru-paru, bahkan pada orang yang bukan perokok.\nStudi yang dipublikasikan dalam jurnal Nature Medicine ini mengamati data lebih dari 462.000 orang di Cina yang diikuti selama rata-rata enam tahun. Para peserta dibagi menjadi dua kelompok: mereka yang tinggal di daerah dengan tingkat polusi udara yang tinggi dan mereka yang tinggal di daerah dengan tingkat polusi udara yang rendah.\nPara peneliti menemukan bahwa orang-orang dalam kelompok polusi tinggi lebih mungkin terkena kanker paru-paru daripada mereka yang berada dalam kelompok polusi rendah. Mereka juga menemukan bahwa risikonya lebih tinggi pada orang yang bukan perokok daripada perokok, dan risikonya meningkat seiring bertambahnya usia.\nMeskipun penelitian ini tidak membuktikan bahwa polusi udara menyebabkan kanker paru-paru, namun penelitian ini menunjukkan bahwa mungkin ada hubungan antara keduanya. Penelitian lebih lanjut diperlukan untuk mengkonfirmasi temuan ini dan untuk menentukan apa pengaruh berbagai jenis dan tingkat polusi udara terhadap risiko kanker paru-paru.</string>
    <string name="how_works">
        Membuat model klasifikasi menggunakan machine learning berbasis TensorFlow dan TFLite. Membangun antarmuka pengguna menggunakan Streamlit dengan input interaktif dan hasil yang mudah dipahami. Menggunakan dataset historis dengan fitur gaya hidup dan kesehatan untuk pelatihan model, seperti usia, kebiasaan merokok, riwayat keluarga, dsb.
    </string>
    <string name="deskription_dataset">
        Dataset ini merupakan kumpulan data pasien yang dirancang untuk prediksi tingkat risiko atau stadium kanker paru-paru. Data ini mencakup tiga kategori utama: faktor risiko (seperti usia, merokok, polusi udara, dan genetik), gejala klinis yang dialami pasien (seperti nyeri dada, batuk darah, dan penurunan berat badan), serta variabel target Level yang mengindikasikan tingkat keparahan (misalnya, Rendah, Sedang, Tinggi). Dataset ini sangat cocok digunakan untuk membangun dan melatih model klasifikasi machine learning untuk deteksi dini atau asesmen risiko kanker paru-paru.
    </string>
    <string name="age">Usia (Numerik)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nUsia adalah salah satu faktor risiko paling signifikan untuk hampir semua jenis kanker, termasuk kanker paru-paru. Seiring bertambahnya usia, tubuh kita memiliki lebih banyak waktu untuk mengakumulasi kerusakan atau mutasi genetik pada sel, dan kemampuan tubuh untuk memperbaiki kerusakan sel tersebut cenderung menurun.</string>
    <string name="gender">Jenis Kelamin (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nSecara historis, pria memiliki tingkat kanker paru-paru yang lebih tinggi, sebagian besar karena tingkat merokok yang lebih tinggi di masa lalu. Namun, beberapa penelitian juga menunjukkan bahwa mungkin ada perbedaan biologis, di mana wanita bisa jadi lebih rentan terhadap zat karsinogen (penyebab kanker) dalam asap tembakau.</string>
    <string name="polution">Polusi Udara (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nPaparan jangka panjang terhadap polusi udara, terutama partikel halus seperti PM2.5, adalah faktor risiko yang telah terbukti untuk kanker paru-paru. Partikel-partikel ini dapat masuk jauh ke dalam paru-paru, menyebabkan peradangan kronis dan kerusakan sel yang dapat memicu kanker.</string>
    <string name="alkohol">Penggunaan alkohol (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nMeskipun tidak sekuat merokok, konsumsi alkohol yang berlebihan dapat meningkatkan risiko kanker paru-paru. Alkohol dapat merusak kemampuan tubuh untuk menyerap nutrisi penting dan memperbaiki DNA yang rusak, serta seringkali terkait dengan perilaku berisiko lainnya seperti merokok.</string>
    <string name="alergic">Alergi Debu (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nAlergi debu sendiri tidak secara langsung menyebabkan kanker, tetapi ini bisa menjadi penanda adanya peradangan kronis pada saluran pernapasan. Peradangan jangka panjang di paru-paru dapat menciptakan lingkungan yang mendukung pertumbuhan sel kanker.</string>
    <string name="dangerous_work">Bahaya Pekerjaan (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nPaparan zat berbahaya di tempat kerja merupakan penyebab utama kanker paru-paru, terutama bagi non-perokok. Zat-zat seperti asbes, silika, knalpot diesel, dan radon dapat terhirup selama bertahun-tahun dan secara langsung merusak sel-sel paru-paru.</string>
    <string name="gen_risk">Risiko Genetik (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nMemiliki riwayat keluarga dengan kanker paru-paru (misalnya, orang tua atau saudara kandung) dapat meningkatkan risiko seseorang. Hal ini menunjukkan kemungkinan adanya warisan mutasi genetik yang membuat sel lebih rentan untuk berubah menjadi kanker.</string>
    <string name="lung_cronis">Penyakit Paru Kronis (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nKondisi seperti Penyakit Paru Obstruktif Kronis (PPOK) atau fibrosis paru menyebabkan peradangan dan kerusakan jaringan paru-paru secara terus-menerus. Jaringan yang rusak dan meradang ini memiliki risiko lebih tinggi untuk mengalami perubahan sel menjadi kanker.</string>
    <string name="diet">Diet Seimbang (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nPola makan yang tidak seimbang dan kurang buah serta sayuran dapat melemahkan sistem kekebalan tubuh dan mengurangi asupan antioksidan. Antioksidan penting untuk melindungi sel dari kerusakan yang disebabkan oleh radikal bebas, yang merupakan salah satu pemicu kanker.</string>
    <string name="obesity">Obesitas (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nObesitas menyebabkan peradangan tingkat rendah yang kronis di seluruh tubuh dan dapat mengubah kadar hormon tertentu. Kondisi ini menciptakan lingkungan yang kondusif bagi perkembangan dan pertumbuhan sel kanker.</string>
    <string name="smoking">Merokok (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nIni adalah faktor risiko tunggal terbesar untuk kanker paru-paru, bertanggung jawab atas sebagian besar kasus. Asap rokok mengandung ribuan bahan kimia beracun yang secara langsung merusak DNA sel-sel di paru-paru.</string>
    <string name="pasif_smok">Perokok Pasif (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nMenghirup asap rokok dari orang lain (perokok pasif) juga secara signifikan meningkatkan risiko kanker paru-paru. Asap rokok bekas mengandung karsinogen yang sama dengan yang dihirup oleh perokok aktif.</string>
    <string name="chest_pain">Nyeri Dada (Kategorikal)\nTipe Data : Int64\nBentuk Nilai Fitur : Numerik\n\nNyeri dada yang tumpul, tajam, atau konstan bisa menjadi tanda bahwa tumor paru-paru menekan saraf, tulang rusuk, atau struktur lain di dada. Ini sering kali merupakan gejala dari penyakit yang sudah lebih lanjut.</string>
    <string name="deskription_model">
        Arsitektur model yang digunakan dalam aplikasi ini adalah sebuah Artificial Neural Network (ANN) yang terdiri dari beberapa lapisan (layers).
        Model ANN yang digunakan dikembangkan menggunakan pustaka Tensorflow dan keras. Model ini dilatih untuk memprediksi hasil berdasarkan dataset yang telah dibersihkan dan diporses sebelumnya
    </string>
    <string name="data_transform_sub">
        - Penghapusan Kolom index dan Patient Id dihapus dari dataset. Kolom-kolom ini tidak relevan untuk prediksi karena hanya berfungsi sebagai pengidentifikasi unik dan tidak memberikan informasi pola.\n
        - Semua fitur numerik (kolom selain Level) diskalakan menggunakan MinMaxScaler. Tujuan dari MinMaxScaler adalah mengubah skala setiap fitur sehingga nilainya berada dalam rentang antara 0 dan 1. Ini penting untuk model ANN agar fitur dengan rentang nilai yang besar tidak mendominasi proses pembelajaran.\n
        - Kolom target Level yang berisi nilai kategorikal (Low, Medium, High) diubah menjadi nilai numerik integer menggunakan LabelEncoder.\n
        - Fitur (X): Didefinisikan sebagai semua kolom dalam dataset setelah menghapus kolom Level. Variabel X berisi semua faktor risiko yang akan digunakan untuk membuat prediksi (usia, polusi udara, merokok, dll).\n
        - Label (y): Didefinisikan sebagai kolom Level saja. Variabel y adalah apa yang ingin diprediksi oleh model (tingkat risiko kanker paru-paru).
    </string>
    <string name="modelling">
        - train_test_split adalah sebuah fungsi dari pustaka scikit-learn di Python yang digunakan untuk membagi dataset menjadi dua subset: data latih (training set) dan data uji (test set)\n
        - Stadarisasi data yang sudah di split menggunakan MinMaxScaler
    </string>
    <string name="modelling_ann">
        - Kompilasi Model: Sebelum pelatihan, model perlu dikompilasi dengan beberapa konfigurasi: \n
        - Optimizer: adam digunakan sebagai optimizer. Adam adalah algoritma optimasi yang efisien dan umum digunakan untuk memperbarui bobot (weights) model selama pelatihan.\n
        - Loss Function: sparse_categorical_crossentropy dipilih sebagai fungsi kerugian. Fungsi ini cocok untuk masalah klasifikasi multi-kelas di mana label targetnya adalah integer (seperti hasil dari LabelEncoder).\n
        - Metrics: accuracy digunakan sebagai metrik untuk memantau performa model selama pelatihan dan evaluasi.
    </string>
    <string name="modelling_ann2">
        - Model dilatih menggunakan metode model.fit() pada data latih (X_train, y_train).\n
        - Pelatihan dilakukan sebanyak 50 epoch, yang berarti model akan melihat keseluruhan data latih sebanyak 50 kali.\n
        - Early Stopping: Mekanisme EarlyStopping digunakan untuk menghentikan pelatihan jika tidak ada peningkatan pada val_loss (loss pada data validasi) selama 5 epoch berturut-turut (patience=5). Ini membantu mencegah overfitting.\n
        - Data Validasi: Selama pelatihan, 20% dari data latih (validation_split=0.2) disisihkan sebagai data validasi untuk memantau performa model pada setiap epoch.
    </string>
    <string name="eda_1">
        Dataset ini terbagi hampir rata dengan masing masing tingkat resiko kanker paru paru untuk Low = 30,30%, Medium = 33,20% dan high = 36,50%. Dengan begitu dalam dataset ini akan lebih banyak data dengan resiko kanker paru paru High
    </string>
    <string name="eda_2">
        Data menunjukkan bahwa semakin banyak mengkonsumsi Alkohol akan semakin kesulitan untuk menelan
    </string>
    <string name="eda_3">
        Dataset ini menunjukan bahwa wanita di setiap tingkatan resiko kanker paru paru lebih tinggi kecuali Low, data membuktikan bahwa wantia lebih beresiko terkena kanker paru paru
    </string>
    <string name="eda_4">
        Data Menunjukan bahwa : \ n
        - Data Level Low = Banyak umur pada rentang 20 dan 30\n
        - Data Level Medium = Banyak umur pada rentang 30 dan 40\n
        - Data Level High = Banyak umur pada rentang 30 dan 40, menunjukan bahwa umur tersebut memiliki tingkat resiko yang tinggi\n
    </string>
    <string name="eda_5">
        Pada data heatmap ini menunjukan bahwa, jika memiliki keturunan terkena kanker paru paru akan semakin meningkat resiko pada orang keturunannya
    </string>
</resources>