<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/design_default_color_background"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tentang Model"
                android:textColor="@color/brand_teal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arsitektur Model"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskription_model"
                android:textColor="@color/black"
                android:justificationMode="inter_character"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model Machine Learning"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raw Data"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="4dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/raw_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exploratory Data Analysis"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_8"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eda_1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_9"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eda_2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_10"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eda_3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_11"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eda_4"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_12"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eda_5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pre-Processing"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data Transform"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="4dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img"
                android:layout_marginBottom="8dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_1"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_transform_sub"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="4dp"
                android:justificationMode="inter_character"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Modelling"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_2"
                android:layout_marginBottom="8dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_3"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelling"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="8dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_4"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelling_ann"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="8dp"
                android:justificationMode="inter_character"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_5"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelling_ann2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="8dp"
                android:justificationMode="inter_character"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accuracy"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_6"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plot Histori Training dan Validation"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_7"
                android:layout_marginBottom="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
